k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  namespace: url-shortener
  labels:
    app: url-shortener
    component: service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: url-shortener
    component: app
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service-nodeport
  namespace: url-shortener
  labels:
    app: url-shortener
    component: service-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 30080
  selector:
    app: url-shortener
    component: app
